--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "drei": "^2.2.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "react-scripts": "5.0.1",
     "three": "^0.175.0",
     "web-vitals": "^2.1.4"
